# cpxy-ng

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.client  fly.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish-client.yml  docker-publish.yml
client/: Cargo.toml
client/android-app/: .gitignore
client/android-app/app/: build.gradle.kts  proguard-rules.pro
client/android-app/app/src/main/: AndroidManifest.xml
client/android-app/app/src/main/java/dev/fanchao/cpxy/: App.kt  Client.kt  ClientConfiguration.kt  ClientConfigurationRepository.kt  ClientInstanceManager.kt  ClientService.kt  ClientServiceCoordinator.kt  Config.kt  ConfigRepository.kt  EventsRepository.kt  MainActivity.kt  ProfileInstanceManager.kt  StopServiceReceiver.kt
client/android-app/app/src/main/java/dev/fanchao/cpxy/ui/: EditConfigScreen.kt  EditProfileScreen.kt  EventViewer.kt  HomeScreen.kt  ProfileList.kt  ProfileListScreen.kt  ProxyConfigScreen.kt  ServerListScreen.kt  Settings.kt
client/android-app/app/src/main/java/dev/fanchao/cpxy/ui/theme/: Color.kt  Theme.kt  Type.kt
client/android-app/app/src/main/res/values/: strings.xml  themes.xml
client/android-app/gradle/: libs.versions.toml
client/android-app/gradle/wrapper/: gradle-wrapper.properties
client/src/: c_binding.rs  client.rs  counted_stream.rs  direct_outbound.rs  dns_divert.rs  dynlib.rs  either_outbound.rs  either_stream.rs  handshaker.rs  http_proxy_server.rs  ip_divert_outbound.rs  jni_binding.rs  lib.rs  protocol_config.rs  protocol_handlers.rs  protocol_outbound.rs  proxy_handlers.rs  selector_outbound.rs  site_divert_outbound.rs  socks_proxy_server.rs  stats_outbound.rs  stats_server.rs
client/src/outbound/: cn.rs  direct.rs  either.rs  http.rs  ip_divert.rs  mod.rs  protocol.rs  resolving_ip.rs  site_divert.rs  stat_reporting.rs
cpxy-ng/: Cargo.toml
cpxy-ng/src/: cipher_select.rs  dns_model.rs  geoip.rs  http_protocol.rs  http_proxy.rs  http_stream.rs  http_util.rs  key_util.rs  lib.rs  outbound.rs  protocol.rs  socks_stream.rs  time_util.rs  tls_stream.rs
dns-master-server/: Cargo.toml
dns-master-server/src/: main.rs  resolver.rs  server.rs
geoip-data/: Cargo.toml  build.rs
geoip-data/src/: lib.rs
geoip-v2ray/: Cargo.toml  build.rs
geoip-v2ray/src/: geoip.proto  lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
src/: client.rs  encrypt_stream.rs  http_protocol.rs  http_proxy.rs  http_stream.rs  http_util.rs  lib.rs  protocol.rs  server.rs  test.rs
