[package]
name = "cpxy-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
#hyper = { version = "1", default-features = false, features = ["client", "server", "http1"] }
tokio = { version = "1", default-features = false, features = ["macros", "net", "io-util", "rt-multi-thread", "sync", "signal", "time"] }
tracing = {  version = "0", features = ["async-await"] }
tracing-subscriber = "0"
dotenvy = "0"
anyhow = "1"
rkyv = "0.8.11"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
rand = "0.9.2"
httparse = "1"
bytes = "1.10.1"
sha1 = "0.10.6"
url = "2.5.7"
clap = { version = "4", features = ["derive", "env"] }
tokio-rustls = "0"
webpki-roots = "1.0.2"
rustls-pki-types = "1.12.0"
futures = "0.3.31"
pin-project-lite = "0.2.16"
sha256 = { version = "1.6.0", default-features  = false }

[profile."release"]
strip = true