[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpxy-ng = { path = "../cpxy-ng" }
tokio = { version = "1", default-features = false, features = ["macros", "net", "io-util", "rt-multi-thread", "time"] }
tracing = {  version = "0", features = ["async-await"] }
tracing-subscriber = "0"
dotenvy = "0"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0"
geoip-data = { path = "../geoip-data" }
url = "2"
ipnet = "2"
parking_lot = "0.12.4"
futures = "0.3.31"
