[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpxy-ng = { path = "../cpxy-ng" }
tokio = { version = "1", default-features = false, features = ["macros", "net", "io-util", "rt-multi-thread", "time", "signal"] }
tracing = {  version = "0", features = ["async-await"] }
tracing-subscriber = "0"
dotenvy = "0"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
geoip-data = { path = "../geoip-data" }
url = "2"
ipnet = "2"
futures = "0.3.31"
axum = { version = "0", default-features = false, features = ["json", "ws", "http1"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hickory-resolver = "0.25.2"
