[package]
name = "cpxy-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
] }
anyhow = "1"
rkyv = "0.8.11"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
rand = "0.9.2"
httparse = "1"
bytes = "1.10.1"
sha1 = "0.10.6"
url = "2.5.7"
pin-project-lite = "0.2.16"
sha2 = "0.10.9"
tokio-rustls = { version = "0", default-features = false, features = [
    "ring",
    "logging",
    "tls12",
] }
webpki-roots = "1.0.2"
